preventing horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -44,8 +44,13 @@ section {
   to   { opacity: 1; }
 }
 
+body, html {
+  overflow-x: hidden;
+}
+
 
 body {
+  position: relative;
   margin: 0;
   padding: 0;
   background-color: whitesmoke;
